// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Data Management - Main - Hris Re-Authentication Modal should not show the form text and should show a required error message once a submit has been attempted 1`] = `
<pf-hris-reauthentication-modal
  attemptedSubmit="false"
  fb={[Function FormBuilder]}
  hrisAuthFormErrors$={[Function Store]}
  hrisAuthFormSaving$={[Function Store]}
  hrisReAuthenticateForm={[Function FormGroup]}
  hrisReAuthenticateFormOpen$={[Function Store]}
  selectedProviderSub={[Function Subscriber]}
  store={[Function Store]}
  submitted={[Function Boolean]}
  userNameValidtors={[Function Array]}
>
  <pf-modal-form
    class="ng-untouched ng-pristine ng-invalid"
    ng-reflect-form="[object Object]"
    title="Authenticate"
  >
    
    
    <div
      class="form-group"
    >
      <input
        class="form-control ng-untouched ng-pristine ng-invalid"
        formcontrolname="username"
        id="username"
        ng-reflect-klass="form-control"
        ng-reflect-name="username"
        ng-reflect-ng-class="[object Object]"
        pffocus=""
        placeholder="Username*"
        type="text"
      />
      
    </div>
    <div
      class="form-group"
    >
      <input
        class="form-control ng-untouched ng-pristine ng-invalid"
        formcontrolname="password"
        id="password"
        ng-reflect-klass="form-control"
        ng-reflect-name="password"
        ng-reflect-ng-class="[object Object]"
        placeholder="Password*"
        type="password"
      />
      
    </div>
  </pf-modal-form>
</pf-hris-reauthentication-modal>
`;

exports[`Data Management - Main - Hris Re-Authentication Modal should show the form text and no error messages when a submit has not been attempted 1`] = `
<pf-hris-reauthentication-modal
  attemptedSubmit="false"
  fb={[Function FormBuilder]}
  hrisAuthFormErrors$={[Function Store]}
  hrisAuthFormSaving$={[Function Store]}
  hrisReAuthenticateForm={[Function FormGroup]}
  hrisReAuthenticateFormOpen$={[Function Store]}
  selectedProviderSub={[Function Subscriber]}
  store={[Function Store]}
  submitted="false"
  userNameValidtors={[Function Array]}
>
  <pf-modal-form
    class="ng-untouched ng-pristine ng-invalid"
    ng-reflect-form="[object Object]"
    title="Authenticate"
  >
    
    
    <div
      class="form-group"
    >
      <input
        class="form-control ng-untouched ng-pristine ng-invalid"
        formcontrolname="username"
        id="username"
        ng-reflect-klass="form-control"
        ng-reflect-name="username"
        ng-reflect-ng-class="[object Object]"
        pffocus=""
        placeholder="Username*"
        type="text"
      />
      
    </div>
    <div
      class="form-group"
    >
      <input
        class="form-control ng-untouched ng-pristine ng-invalid"
        formcontrolname="password"
        id="password"
        ng-reflect-klass="form-control"
        ng-reflect-name="password"
        ng-reflect-ng-class="[object Object]"
        placeholder="Password*"
        type="password"
      />
      
    </div>
  </pf-modal-form>
</pf-hris-reauthentication-modal>
`;
